--- a/tanki-otchet/style.css
+++ b/tanki-otchet/style.css
@@ -40,6 +40,12 @@ hr{
   height: auto;
 }
 
+.lab1_img{
+  margin: 60px auto;
+  width: 400px;
+  height: auto;
+}
+
 .title-list_img img {
   height: 100%;
   width: 100%;
